--- a/lighting.html
+++ b/lighting.html
@@ -1,48 +1,78 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lighting | Intellis Vision</title>
-  <link rel="stylesheet" href="styles/general.css" />
+  <link rel="stylesheet" href="styles/lighting.css" />
   <link rel="stylesheet" href="styles/navbar.css" />
-  <link rel="stylesheet" href="styles/footer.css" />
+  <link rel="stylesheet" href="styles/gallery.css" />
+  <link rel="icon" type="image/png" href="images/iv-logo.png" />
 </head>
 <body>
-  <div class="navbar">
-    <div class="logo">
-      <a href="index.html">Intellis Vision Inc.</a>
+  <!-- Navbar -->
+        <div class="navbar">
+      <div class="logo">
+        <a href="index.html">
+          <img src="images/iv-logo.png" alt="Intellis Vision Logo" style="height: 40px; vertical-align: middle; margin-right: 10px;" />
+          Intellis Vision Inc.
+        </a>
+      </div>
     </div>
-    <ul class="nav-links">
-      <li><a href="index.html#home">Home</a></li>
-      <li><a href="index.html#services">Services</a></li>
-      <li><a href="index.html#about">About Us</a></li>
-      <li><a href="index.html#contact">Contact</a></li>
-    </ul>
-  </div>
+  
+  
 
-  <section style="padding-top:100px; text-align: center;">
-    <h1>Lighting</h1>
-    <p>Explore our expert lighting solutions — crafted with care and cutting-edge technology to fit your home perfectly.</p>
-    <div style="max-width: 800px; margin: 40px auto; font-size: 18px; line-height: 1.8;">
+  <section class="hero">
+    <div class="hero-text">
+      <h1>Lighting Solutions</h1>
+      <p>Elegant, Efficient, and Expertly Installed</p>
+    </div>
+  </section>
+
+  <section class="content-block left">
+    <div class="text">
+      <h2>Lighting Installation</h2>
       <p>
-        At Intellis Vision, our lighting services are tailored for custom installations, clean aesthetics, and total system integration. We assess each project individually, ensuring seamless functionality with beautiful design.
+        Lighting is one of the most important, yet so subtle, elements in the overall interior design of any space. 
+        Cove lighting, monorail, recessed fixtures, green technology LEDs; fluorescent accent; decorative wall fixtures; 
+        each plays its role in bringing the best in each piece of art, furniture or just in the overall aspect of the room.
       </p>
+    </div>
+    <div class="image" style="background-image: url('images/placeholder1.jpg');"></div>
+  </section>
+
+  <section class="content-block right">
+    <div class="image" style="background-image: url('images/placeholder2.jpg');"></div>
+    <div class="text">
+      <h2>Lighting Control</h2>
       <p>
-        Reach out today for a free consultation and learn how our certified professionals can upgrade your home.
+        The Lighting Control Systems allows you to control and program the lighting from one room or the entire house 
+        from wall-mounted keypads. They have a sharp, clean look and are illuminated with custom-engraved preset scenes.
+        Save money, energy, improve aesthetics and be safe in your home when you try the new way to control light fixtures.
       </p>
     </div>
   </section>
 
-  <footer class="footer">
-    <div class="footer-content">
-      <h2>Contact Us</h2>
-      <p>Contact us today for your free estimation.</p>
-      <div class="contact-details">
-        <p><strong>Phone:</strong> 416-315-3934</p>
-        <p><strong>Email:</strong> <a href="mailto:support@intellisvision.ca">support@intellisvision.ca</a></p>
+
+  <section class="gallery-section">
+    <h2>Gallery</h2>
+    <div class="gallery-wrapper">
+      <button class="nav prev">&#10094;</button>
+      <div class="gallery-slider">
+        <img src="images/lighting-gallery-1.jpg" class="gallery-image" alt="Lighting Project 1" />
+        <img src="images/lighting-gallery-2.jpg" class="gallery-image" alt="Lighting Project 2" />
+        <img src="images/lighting-gallery-3.jpg" class="gallery-image" alt="Lighting Project 3" />
+        <img src="images/lighting-gallery-4.jpg" class="gallery-image" alt="Lighting Project 4" />
+        <img src="images/lighting-gallery-5.jpg" class="gallery-image" alt="Lighting Project 5" />
+        <img src="images/lighting-gallery-6.jpg" class="gallery-image" alt="Lighting Project 6" />
       </div>
+      <button class="nav next">&#10095;</button>
     </div>
-  </footer>
+  </section>
+
+
+  <script src="scripts/gallery.js"></script>
+
 </body>
 </html>
