--- a/lighting.html
+++ b/lighting.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lighting | Intellis Vision</title>
-  <link rel="stylesheet" href="styles/lighting.css" />
+  <link rel="stylesheet" href="styles/services.css" />
   <link rel="stylesheet" href="styles/navbar.css" />
   <link rel="stylesheet" href="styles/gallery.css" />
   <link rel="icon" type="image/png" href="images/iv-logo.png" />
@@ -23,11 +23,11 @@
   
   
 
-  <section class="hero">
-    <div class="hero-text">
-      <h1>Lighting Solutions</h1>
-      <p>Elegant, Efficient, and Expertly Installed</p>
-    </div>
+  <section class="hero" style="background-image: url('images/placeholder-hero-lighting.jpg');"></section>
+      <div class="hero-text">
+        <h1>Lighting Solutions</h1>
+        <p>Elegant, Efficient, and Expertly Installed</p>
+      </div>
   </section>
 
   <section class="content-block left">
