--- a/audio-video.html
+++ b/audio-video.html
@@ -4,45 +4,77 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Audio-Video | Intellis Vision</title>
-  <link rel="stylesheet" href="styles/general.css" />
+  <link rel="stylesheet" href="styles/services.css" />
   <link rel="stylesheet" href="styles/navbar.css" />
-  <link rel="stylesheet" href="styles/footer.css" />
+  <link rel="stylesheet" href="styles/gallery.css" />
+  <link rel="icon" type="image/png" href="images/iv-logo.png" />
 </head>
 <body>
+
+  <!-- Navbar -->
   <div class="navbar">
     <div class="logo">
-      <a href="index.html">Intellis Vision Inc.</a>
+      <a href="index.html">
+        <img src="images/iv-logo.png" alt="Intellis Vision Logo" style="height: 40px; vertical-align: middle; margin-right: 10px;" />
+        Intellis Vision Inc.
+      </a>
     </div>
-    <ul class="nav-links">
-      <li><a href="index.html#home">Home</a></li>
-      <li><a href="index.html#services">Services</a></li>
-      <li><a href="index.html#about">About Us</a></li>
-      <li><a href="index.html#contact">Contact</a></li>
-    </ul>
   </div>
 
-  <section style="padding-top:100px; text-align: center;">
-    <h1>Audio-Video</h1>
-    <p>Explore our expert audio-video solutions — crafted with care and cutting-edge technology to fit your home perfectly.</p>
-    <div style="max-width: 800px; margin: 40px auto; font-size: 18px; line-height: 1.8;">
+  <!-- Hero Section -->
+  <section class="hero" style="background-image: url('images/placeholder-hero-av.jpg');"></section>
+  <div class="hero-text">
+    <h1>Audio-Video Solutions</h1>
+    <p>Seamless Integration for Home Entertainment & Security</p>
+  </div>
+
+  <section class="content-block left">
+    <div class="text">
+      <h2>TV Mounting & Home Theatre</h2>
       <p>
-        At Intellis Vision, our audio-video services are tailored for custom installations, clean aesthetics, and total system integration. We assess each project individually, ensuring seamless functionality with beautiful design.
+        Create an immersive entertainment space with professionally mounted TVs and customized home theatre systems. 
+        Enjoy cinematic experiences from the comfort of your home, with optimal viewing angles, surround sound setups, and hidden cabling.
       </p>
+    </div>
+    <div class="image" style="background-image: url('images/placeholder-av1.jpg');"></div>
+  </section>
+
+  <section class="content-block right">
+    <div class="image" style="background-image: url('images/placeholder-av2.jpg');"></div>
+    <div class="text">
+      <h2>Invisible Speakers & Distributed Audio</h2>
       <p>
-        Reach out today for a free consultation and learn how our certified professionals can upgrade your home.
+        Keep your space elegant while still enjoying premium sound. Our invisible speaker and distributed audio systems deliver rich, 
+        balanced sound throughout your home without compromising interior aesthetics.
       </p>
     </div>
   </section>
 
-  <footer class="footer">
-    <div class="footer-content">
-      <h2>Contact Us</h2>
-      <p>Contact us today for your free estimation.</p>
-      <div class="contact-details">
-        <p><strong>Phone:</strong> 416-315-3934</p>
-        <p><strong>Email:</strong> <a href="mailto:support@intellisvision.ca">support@intellisvision.ca</a></p>
-      </div>
+  <section class="content-block left">
+    <div class="text">
+      <h2>Surveillance</h2>
+      <p>
+        Protect your property with discrete and intelligent surveillance systems. From entry points to perimeter monitoring, 
+        our integrated solutions give you peace of mind with remote viewing and motion-triggered alerts.
+      </p>
     </div>
-  </footer>
+    <div class="image" style="background-image: url('images/placeholder-av3.jpg');"></div>
+  </section>
+
+  <section class="gallery-section">
+    <h2>Gallery</h2>
+    <div class="gallery-wrapper">
+      <button class="nav prev">&#10094;</button>
+      <div class="gallery-slider">
+        <img src="images/av-gallery-1.jpg" class="gallery-image" alt="AV Project 1" />
+        <img src="images/av-gallery-2.jpg" class="gallery-image" alt="AV Project 2" />
+        <img src="images/av-gallery-3.jpg" class="gallery-image" alt="AV Project 3" />
+      </div>
+      <button class="nav next">&#10095;</button>
+    </div>
+  </section>
+
+  <script src="scripts/gallery.js"></script>
+
 </body>
 </html>
