--- a/lighting.html
+++ b/lighting.html
@@ -61,11 +61,23 @@
       <button class="nav prev">&#10094;</button>
       <div class="gallery-slider">
         <img src="images/lighting-gallery-1.jpg" class="gallery-image" alt="Lighting Project 1" />
+        <img src="images/lighting-gallery-1a.jpg" class="gallery-image" alt="Lighting Project 1a" />
         <img src="images/lighting-gallery-2.jpg" class="gallery-image" alt="Lighting Project 2" />
         <img src="images/lighting-gallery-3.jpg" class="gallery-image" alt="Lighting Project 3" />
+        <img src="images/lighting-gallery-3a.jpg" class="gallery-image" alt="Lighting Project 3" />
+        <img src="images/lighting-gallery-10.jpg" class="gallery-image" alt="Lighting Project 10" />
         <img src="images/lighting-gallery-4.jpg" class="gallery-image" alt="Lighting Project 4" />
         <img src="images/lighting-gallery-5.jpg" class="gallery-image" alt="Lighting Project 5" />
+        <img src="images/lighting-gallery-12.jpg" class="gallery-image" alt="Lighting Project 12" />
         <img src="images/lighting-gallery-6.jpg" class="gallery-image" alt="Lighting Project 6" />
+        <img src="images/lighting-gallery-7.jpg" class="gallery-image" alt="Lighting Project 7" />
+        <img src="images/lighting-gallery-8.jpg" class="gallery-image" alt="Lighting Project 8" />
+        <img src="images/lighting-gallery-9.jpg" class="gallery-image" alt="Lighting Project 9" />
+        <img src="images/lighting-gallery-14.jpg" class="gallery-image" alt="Lighting Project 14" />
+        <img src="images/lighting-gallery-11.jpg" class="gallery-image" alt="Lighting Project 11" />
+        <img src="images/lighting-gallery-13.jpg" class="gallery-image" alt="Lighting Project 13" />
+        <img src="images/lighting-gallery-15.jpg" class="gallery-image" alt="Lighting Project 15" />
+        <img src="images/lighting-gallery-16.jpg" class="gallery-image" alt="Lighting Project 16" />
       </div>
       <button class="nav next">&#10095;</button>
     </div>
