--- a/motorized-shades.html
+++ b/motorized-shades.html
@@ -67,6 +67,7 @@
         <img src="images/shades-gallery-2.jpg" class="gallery-image" alt="Shades Project 2" />
         <img src="images/shades-gallery-3.jpg" class="gallery-image" alt="Shades Project 3" />
         <img src="images/shades-gallery-4.jpg" class="gallery-image" alt="Shades Project 4" />
+        <img src="images/shades-gallery-5.jpg" class="gallery-image" alt="Shades Project 5" />
       </div>
       <button class="nav next">&#10095;</button>
     </div>
