--- a/electrical-integration.html
+++ b/electrical-integration.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Audio-Video | Intellis Vision</title>
+  <title>Electrical Integration | Intellis Vision</title>
   <link rel="stylesheet" href="styles/services.css" />
   <link rel="stylesheet" href="styles/navbar.css" />
   <link rel="stylesheet" href="styles/gallery.css" />
@@ -35,53 +35,50 @@
   </div>
 
   <!-- Hero Section -->
-  <section class="hero" style="background-image: url('images/placeholder-hero-av.jpg');"></section>
+  <section class="hero" style="background-image: url('images/placeholder-hero.jpg');"></section>
   <div class="hero-text">
-    <h1>Audio-Video Solutions</h1>
-    <p>Seamless Integration for Home Entertainment & Security</p>
+    <h1>Electrical Services</h1>
+    <p>Safe, Certified, and Custom Tailored to Your Needs</p>
   </div>
 
-  <section class="content-block left">
-    <div class="text">
-      <h2>TV Mounting & Home Theatre</h2>
-      <p>
-        Create an immersive entertainment space with professionally mounted TVs and customized home theatre systems. 
-        Enjoy cinematic experiences from the comfort of your home, with optimal viewing angles, surround sound setups, and hidden cabling.
-      </p>
-    </div>
-    <div class="image" style="background-image: url('images/placeholder-av1.jpg');"></div>
-  </section>
-
   <section class="content-block right">
-    <div class="image" style="background-image: url('images/placeholder-av2.jpg');"></div>
+    <div class="image" style="background-image: url('images/placeholder-electric2.jpg');"></div>
     <div class="text">
-      <h2>Invisible Speakers & Distributed Audio</h2>
+      <h2>Residential and Commercial Wiring</h2>
       <p>
-        Keep your space elegant while still enjoying premium sound. Our invisible speaker and distributed audio systems deliver rich, 
-        balanced sound throughout your home without compromising interior aesthetics.
+        From new construction to remodels, we handle all your wiring needs. Our team provides structured cabling for data, power, and smart systems.
       </p>
     </div>
+  </section>
+  
+  <section class="content-block left">
+    <div class="text">
+      <h2>Car Chargers</h2>
+      <p>
+        Future-proof your home with EV car charger installations. Whether it’s Tesla, Level 2, or universal ports, we ensure efficient and code-compliant setups.
+      </p>
+    </div>
+    <div class="image" style="background-image: url('images/placeholder-electric1.jpg');"></div>
   </section>
 
   <section class="content-block left">
     <div class="text">
-      <h2>Surveillance</h2>
+      <h2>Applicance Hookup</h2>
       <p>
-        Protect your property with discrete and intelligent surveillance systems. From entry points to perimeter monitoring, 
-        our integrated solutions give you peace of mind with remote viewing and motion-triggered alerts.
+        Blah blah blah
       </p>
     </div>
-    <div class="image" style="background-image: url('images/placeholder-audio-video4.jpg');"></div>
+    <div class="image" style="background-image: url('images/placeholder-electric1.jpg');"></div>
   </section>
+  
 
   <section class="gallery-section">
     <h2>Gallery</h2>
     <div class="gallery-wrapper">
       <button class="nav prev">&#10094;</button>
       <div class="gallery-slider">
-        <img src="images/av-gallery-1.jpg" class="gallery-image" alt="AV Project 1" />
-        <img src="images/av-gallery-2.jpg" class="gallery-image" alt="AV Project 2" />
-        <img src="images/av-gallery-3.jpg" class="gallery-image" alt="AV Project 3" />
+        <img src="images/electric-installation-gallery-2.jpg" class="gallery-image" alt="Installation Project 2" />
+        <img src="images/electric-installation-gallery-4.jpg" class="gallery-image" alt="Installation Project 4" />
       </div>
       <button class="nav next">&#10095;</button>
     </div>
