--- a/motorized-shades.html
+++ b/motorized-shades.html
@@ -14,12 +14,26 @@
   <!-- Navbar -->
   <div class="navbar">
     <div class="logo">
-      <a href="index.html">
+      <a href="index.html#home">
         <img src="images/iv-logo.png" alt="Intellis Vision Logo" style="height: 40px; vertical-align: middle; margin-right: 10px;" />
         Intellis Vision Inc.
       </a>
     </div>
+
+    <div class="menu-toggle" id="mobile-menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <ul class="nav-links">
+      <li><a href="index.html#home">Home</a></li>
+      <li><a href="index.html#services">Services</a></li>
+      <li><a href="index.html#about">About Us</a></li>
+      <li><a href="index.html#contact">Contact</a></li>
+    </ul>
   </div>
+
 
   <!-- Hero -->
 <section class="hero video-hero">
@@ -74,6 +88,21 @@
   </section>
 
   <script src="scripts/gallery.js"></script>
+  <script>
+    const menuToggle = document.getElementById('mobile-menu');
+    const navLinks = document.querySelector('.nav-links');
+
+    menuToggle.addEventListener('click', () => {
+      navLinks.classList.toggle('active');
+    });
+
+    document.querySelectorAll(".nav-links a").forEach(link => {
+      link.addEventListener("click", () => {
+        navLinks.classList.remove("active");
+      });
+    });
+  </script>
+
 
 </body>
 </html>
